# HILAS

./: .gitignore  .gitmodules  COPYING.BSD  Doxyfile  LICENSE  README  README.md  stack.xml  test.txt  youbot-stack.rosinstall
Master_executive/: manifest.xml
Master_executive/src/: CMakeLists.txt  Master_executive.cpp
OdomToTF/: CMakeLists.txt  mainpage.dox
YouBot_OODL/: CMakeLists.txt  deploy.ops  deployWifi.ops  manifest.xml
YouBot_VREP/: CMakeLists.txt  manifest.xml
YouBot_VREP/src/: CMakeLists.txt  YouBotArmService.cpp  YouBotBaseService.cpp  YouBotGripperService.cpp  YouBotVREP.cpp
YouBot_adapters/: CMakeLists.txt
YouBot_configurator/: README
YouBot_control/: overarching.rtt  overarching.rtt_diagram
YouBot_controller/: CMakeLists.txt  manifest.xml
YouBot_controller/include/: YouBot_controller-component.hpp
YouBot_controller/include/YouBot_controller/: YouBot_controller-types.hpp
YouBot_controller/src/: CMakeLists.txt  YouBot_controller-component.cpp  YouBot_controller-plugin.cpp
YouBot_controllers/: youbot_control_with_base_v1.emx
YouBot_deployment/: manifest.xml
YouBot_executive/: CMakeLists.txt  manifest.xml
YouBot_joystick/: CMakeLists.txt  Joystick.cpp  Joystick.hpp  README  deploy.ops  load_jostick.ops  load_joystick.ops  manifest.xml
YouBot_queue/: CMakeLists.txt  manifest.xml
amcl_odom_combine/: CMakeLists.txt  deploy.ops  manifest.xml
arm_bridge_ros_orocos/: CMakeLists.txt  deploy.ops  manifest.xml
common/cmd_queue/: CMakeLists.txt  package.xml
common/cmd_queue/include/: Cmd_queue-component.hpp
common/cmd_queue/include/Cmd_queue/: Cmd_queue-types.hpp
common/cmd_queue/src/: CMakeLists.txt  Cmd_queue-component.cpp  Cmd_queue-plugin.cpp
common/fbsched/: CMakeLists.txt  package.xml
config/: hilas.ini  puma260.ini  wam7dof.ini  youBot.ini
definitions/: Definition.cmake  hilas.hpp
deployer/: SetCartesianGoal.lua  connection.lua  definitions.lua  deployer_oodl.lua  frames.gv  move.lua  queue_test.ops  run.sh  runnew.sh  supervisor.lua
deployer_commander/: mainpage.dox  manifest.xml
deployment/: controller.rb  definitions.lua  deployer_oodl.lua  queue_test.ops  run.sh
doc/: add-robot.md  configuration.md  remote-socket.md
hl/robot_interaction/: CMakeLists.txt  package.xml
hl/robot_interaction/launch/: robot_interaction.launch
hl/robot_interaction/src/: robot_interaction.cpp
hl/robot_state_publisher/: CMakeLists.txt  package.xml
hl/robot_state_publisher/launch/: robot_state_publisher.launch
hl/robot_state_publisher/src/: robot_state_publisher.cpp
joystick/: deploy.ops  run.sh
models/: README
motion_stack/: README
robots/puma260/puma260_OODL/src/: CMakeLists.txt  Puma260ArmService.cpp  Puma260GripperService.cpp  puma260_OODL-component.cpp
robots/puma260/puma260_SIM/src/: CMakeLists.txt  Puma260ArmService.cpp  Puma260GripperService.cpp  puma260_SIM-component.cpp  support.cpp
robots/puma260/puma260_cmddemux/: CMakeLists.txt  package.xml
robots/puma260/puma260_cmddemux/include/puma260_cmddemux/: puma260_cmddemux-types.hpp
robots/puma260/puma260_cmddemux/src/: CMakeLists.txt  puma260_cmddemux-component.cpp  puma260_cmddemux-component.hpp
robots/puma260/puma260_description/: CMakeLists.txt  package.xml
robots/puma260/puma260_description/meshes/: arm.stl  arm_old.stl  base_link.stl  base_link_old.stl  end_effector.stl  forearm.stl  link_dummy_1.stl  link_dummy_2.stl  torso.stl  torso_old.stl
robots/puma260/puma260_description/robots/: puma260.urdf
robots/puma260/puma260_kinematics/: CMakeLists.txt  package.xml
robots/puma260/puma260_kinematics/include/puma260_kinematics/: puma260_kinematics-types.hpp
robots/puma260/puma260_kinematics/src/: CMakeLists.txt  puma260_kinematics-component.cpp  puma260_kinematics-component.hpp
robots/youBot/YouBot_SIM/: CMakeLists.txt  package.xml
robots/youBot/YouBot_SIM/include/: YouBotArmService.hpp  YouBotBaseService.hpp  YouBotGripperService.hpp  YouBotTypes.hpp
robots/youBot/YouBot_SIM/src/: CMakeLists.txt  YouBotArmService.cpp  YouBotBaseService.cpp  YouBotGripperService.cpp
robots/youBot/youbot_cmddemux/: CMakeLists.txt  package.xml
robots/youBot/youbot_cmddemux/src/: youbot_cmddemux.cpp
robots/youBot/youbot_kinematics/: CMakeLists.txt  deploy.ops  package.xml  run.sh
robots/youBot/youbot_kinematics/include/youbot_kinematics/: youbot_kinematics-types.hpp
robots/youBot/youbot_kinematics/launch/: youbot_cartesian_controller.launch  youbot_cartesian_controller_deployer.launch
robots/youBot/youbot_kinematics/src/: CMakeLists.txt  youbot_kinematics-component.cpp  youbot_kinematics-component.hpp  youbot_kinematics-plugin.cpp
robots/youbot/youbot_OODL/: CMakeLists.txt  package.xml
robots/youbot/youbot_OODL/include/: YouBotArmService.hpp  YouBotBaseService.hpp  YouBotGripperService.hpp  YouBotOODL.hpp
robots/youbot/youbot_OODL/src/: CMakeLists.txt  YouBotArmService.cpp  YouBotGripperService.cpp
robots/youbot/youbot_kinematics/: CMakeLists.txt
robots/youbot/youbot_kinematics/src/: CMakeLists.txt  youbot_kinematics-component.cpp  youbot_kinematics-component.hpp
rtt_brics_actuator/: manifest.xml
simulator/: CMakeLists.txt  SSimulator.hpp  package.xml
simulator/puma260_scenes/: puma260-table.ttt  puma260-table_dry.ttt
simulator/wam7dof_scenes/: barrett_wam.ttt
simulator/youBot_scenes/: multi_youbot_scenario.ttt  youbot_christmas.ttt  youbot_laser.ttt  youbot_laser_remote.ttt  youbot_laser_remote_new.ttt  youbot_laser_vis_mode.ttt
youbot-stack/YouBot_executive/src/: CMakeLists.txt  ExecutiveHelpers.cpp  YouBot_executive.cpp
youbot-stack/YouBot_queue/src/: CMakeLists.txt  YouBot_queue-component.cpp  YouBot_queue-plugin.cpp
youbot_CV/: CMakeLists.txt  manifest.xml
youbot_CV/include/: pointcloud_save.h
youbot_CV/src/: camera_calibrate.cpp  map_builder.cpp  pointcloud_save.cpp  pointcloud_streamer.cpp  pointcloud_triangulate.cpp  testvrep.cpp  v_repLib.cpp
youbot_qr/: CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml
youbot_qr/include/youbot_qr/: node.hpp
youbot_qr/src/: marker.cpp  node.cpp
(+595 files in other folders)
