<package>
  <name>simulator</name>
  <version>1.0.0</version>
  <description>Simulator singleton</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>
  <license>Unknown</license>
  <url type="website"></url>
  <author>Unknown Author</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
