<package>
  <name>cmd_queue</name>
  <version>1.0.0</version>
  <description>This package contains the components of the cmd_queue package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>
  <license>Unknown</license>
  <url type="website"></url>
  <author>Unknown Author</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_geometry_msgs</build_depend>
  <build_depend>rtt_motion_control_msgs</build_depend>
  <build_depend>roscpp</build_depend>    
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_geometry_msgs</run_depend>
  <run_depend>rtt_motion_control_msgs</run_depend>
  <run_depend>roscpp</run_depend>    
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_motion_control_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>