<?xml version="1.0"?>
<package>
  <name>robot_interaction</name>
  <version>0.0.0</version>
  <description>The robot_interaction package</description>

  <maintainer email="npiccinelli@todo.todo">npiccinelli</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>