<?xml version="1.0"?>
<package>
  <name>robot_state_publisher</name>
  <version>0.0.0</version>
  <description>The robot_state_publisher package</description>

  <maintainer email="npiccinelli@todo.todo">npiccinelli</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>  
  <build_depend>tf</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>kdl_parser</run_depend>

  <export>
  </export>
</package>