<package>
  <name>puma260_description</name>
  <version>0.1.1</version>
  <description>

     puma260_description

  </description>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author>Alexey Zakharov, Sebastian Blumenthal</author>
  <license>LGPL, BSD</license>
  <url>http://ros.org/wiki/youbot_description</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>


